--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
+    "@tailwindcss/forms": "^0.3.2",
     "autoprefixer": "^10.2.5",
     "classnames": "^2.3.1",
     "next": "10.1.2",
     "postcss": "^8.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive-carousel": "^3.2.18",
     "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
